pmd issues fixed